--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,16 @@
-/* Add CSS Styling */
+.odd {
+    background-color:rgb(255,168,181);
+    font-family: Verdana, fantasy, sans-serif;
+    font-size: 24px;
+}
+
+#two {
+    color:rgb(0, 0, 255);
+    font-size: 36px;
+}
+
+#four {
+    background-color: lightgreen;
+    font-weight: bold;
+    font-size: 24px;
+}
