--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  gap: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,23 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.information {
+  display: flex;
+  gap: 52px;
+  padding: 32px;
+  justify-content:space-around;
+}
+
+.item-1, .item-2, .item-3, .item-4 {
+  display: flex;
+  width: 200px;
+  text-wrap: wrap;
+  text-align: center;
+  flex-direction: column;
+}
+
+img {
+  align-self: center;
 }
